# SYSU-Graduation-Project

./: 概述图.vsdx
paper/: Overview.tex  conclusion.tex  experiment.tex  ieeeconf.cls  introduction.tex  main.aux  main.bbl  main.blg  main.tex  mainwork.tex  ref.bib~  relativework.tex  root.aux  root.blg  root.tex
paper/fig/mainwork/: stepMap.eps
regress/: d35cm.txt  main.cpp
regress/ToRegressionControl/: C35.ttt  CMakeLists.txt  D25.ttt  D25T35.ttt  D35T25.ttt  JZYSCENE.ttt  b_s.ttt  main.cpp  mse_regression.py  run.sh  test_5.ttt
regress/ToRegressionControl/CLib/: dataRead.cpp  dataRead.h  definition.cpp  definition.h  mse_regression.cpp
regress/ToRegressionControl/lib/: CMakeLists.txt
regress/ToRegressionControl/originalData/: cluster.txt
regress/cluster/: CMakeLists.txt
regress/cluster/lib/: definition.h  kmeans.h
regress/cluster/src/: dataRead.cpp  kmeans.cpp
regress/dataCombine/: run.sh
regress/dataCombine/src/: main.cpp
regress/data_high/d35cm/: cluster.txt
regress/data_low/: data_2_030.txt  data_2_035.txt
regress/getD/: D35.ttt  README.md  main.cpp  onlyRun.sh  run.sh
regress/getD/CLib/: CMakeLists.txt  op.cpp
regress/getD/VLib/: CMakeLists.txt
regress/getD/lib/: extApiPlatform.h
slave-01-21/bsp/stm32f10x_cantx_host_node/: angleSensor.c  project.uvgui.10999  project.uvguix.10999  project.uvguix.49229  project.uvguix.Administrator  project.uvguix.Freel  project.uvguix.Zhenshan Bing  project.uvguix.d101  project.uvguix.lin  project.uvguix.道丁  (+10 more)
thesis-master/: pax_global_header
thesis-master/thesis-master/: main.bib  main.tex
(+98 files in other folders)
